data/rq1/k1/rust_code/final_projects/host__25c1898e1626/translate_by_qwen3_coder/preprocessed_header.h

typedef signed int int32_t;
typedef unsigned short uint16_t;
typedef unsigned int uint32_t;
int strcmp (const char *, const char *);
struct HdfSListNode {
    struct HdfSListNode *next;
};
struct HdfSList {
    struct HdfSListNode *root;
};
struct HdfSListIterator {
    int stepOnNext;
    struct HdfSListNode *prev;
    struct HdfSListNode *curr;
};
typedef void (*HdfSListDeleter)(struct HdfSListNode *);
typedef _Bool (*HdfSListSearchComparer)(struct HdfSListNode *, uint32_t);
void HdfSListInit(struct HdfSList *list);
struct HdfSListNode *HdfSListSearch(const struct HdfSList *list, uint32_t keyValue, HdfSListSearchComparer comparer);
_Bool HdfSListIsEmpty(const struct HdfSList *list);
void HdfSListAdd(struct HdfSList *list, struct HdfSListNode *link);
void HdfSListRemove(struct HdfSList *list, struct HdfSListNode *link);
void HdfSListFlush(struct HdfSList *list, HdfSListDeleter deleter);
int HdfSListCount(const struct HdfSList *list);
void HdfSListIteratorInit(struct HdfSListIterator *iterator, const struct HdfSList *list);
_Bool HdfSListIteratorHasNext(const struct HdfSListIterator *iterator);
struct HdfSListNode *HdfSListIteratorNext(struct HdfSListIterator *iterator);
void HdfSListIteratorRemove(struct HdfSListIterator *iterator);
struct HdfDeviceInfo {
    struct HdfSListNode node;
    _Bool isDynamic;
    uint16_t status;
    uint16_t deviceType;
    uint32_t deviceId;
    uint16_t policy;
    uint16_t priority;
    uint16_t preload;
    uint16_t permission;
    const char *moduleName;
    const char *svcName;
    const char *deviceMatchAttr;
    const char *deviceName;
};
struct DListHead {
    struct DListHead *next;
    struct DListHead *prev;
};
struct HdfObject {
    int32_t objectId;
};
typedef uint32_t devid_t;
struct HdfSBuf;
_Bool HdfSbufWriteUint32(struct HdfSBuf *sbuf, uint32_t value);
_Bool HdfSbufWriteString(struct HdfSBuf *sbuf, const char *value);
struct IDevHostService {
    struct HdfObject object;
    int (*AddDevice)(struct IDevHostService *hostService, const struct HdfDeviceInfo *devInfo);
    int (*DelDevice)(struct IDevHostService *hostService, devid_t devId);
    int (*StartService)(struct IDevHostService *hostService);
    int (*PmNotify)(struct IDevHostService *service, uint32_t powerState);
    int (*Dump)(struct IDevHostService *hostService, struct HdfSBuf *data, struct HdfSBuf *reply);
};
struct OsalMutex {
    void *realMutex;
};
int32_t OsalMutexInit(struct OsalMutex *mutex);
int32_t OsalMutexDestroy(struct OsalMutex *mutex);
int32_t OsalMutexLock(struct OsalMutex *mutex);
int32_t OsalMutexUnlock(struct OsalMutex *mutex);
struct HdfSBuf;
struct MapNode;
typedef struct {
    struct MapNode **nodes;
    uint32_t nodeSize;
    uint32_t bucketSize;
} Map;
struct DevHostServiceClnt {
    struct DListHead node;
    struct HdfSList devices;
    struct HdfSList unloadDevInfos;
    struct HdfSList dynamicDevInfos;
    Map *deviceHashMap;
    struct IDevHostService *hostService;
    struct OsalMutex hostLock;
    uint16_t devCount;
    uint16_t hostId;
    int hostPid;
    const char *hostName;
    _Bool stopFlag;
};
_Bool HdfAttributeManagerGetHostList(struct HdfSList *hostList);
int HdfAttributeManagerGetDeviceList(struct DevHostServiceClnt *hostClnt);
struct HdfObject *HdfObjectManagerGetObject(int objectId);
typedef enum {
    LOG_TYPE_MIN = 0,
    LOG_INIT = 1,
    LOG_CORE = 3,
    LOG_TYPE_MAX
} LogType;
typedef enum {
    LOG_DEBUG = 3,
    LOG_INFO = 4,
    LOG_WARN = 5,
    LOG_ERROR = 6,
    LOG_FATAL = 7,
} LogLevel;
int HiLogPrint(LogType type, LogLevel level, unsigned int domain, const char* tag, const char* fmt, ...)
    __attribute__((format(os_log, 5, 6)));