data/paper_artifacts/deepseek_v4_pro_ohos10_0613_harness_fixed_v2/projects/manager__c248934e0221/.c2r_bindgen_extern/devmgr_service_a82ed2d6.externs.rs

/* automatically generated by rust-bindgen 0.72.1 */

unsafe extern "C" {
    pub fn strcmp(
        arg1: *const ::core::ffi::c_char,
        arg2: *const ::core::ffi::c_char,
    ) -> ::core::ffi::c_int;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct DListHead {
    pub next: *mut DListHead,
    pub prev: *mut DListHead,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct HdfObject {
    pub objectId: i32,
}
pub type devid_t = u32;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct HdfSListNode {
    pub next: *mut HdfSListNode,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct HdfSList {
    pub root: *mut HdfSListNode,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct HdfSListIterator {
    pub stepOnNext: ::core::ffi::c_int,
    pub prev: *mut HdfSListNode,
    pub curr: *mut HdfSListNode,
}
pub type HdfSListDeleter = ::core::option::Option<unsafe extern "C" fn(arg1: *mut HdfSListNode)>;
pub type HdfSListSearchComparer =
    ::core::option::Option<unsafe extern "C" fn(arg1: *mut HdfSListNode, arg2: u32) -> bool>;
unsafe extern "C" {
    pub fn HdfSListInit(list: *mut HdfSList);
}
unsafe extern "C" {
    pub fn HdfSListSearch(
        list: *const HdfSList,
        keyValue: u32,
        comparer: HdfSListSearchComparer,
    ) -> *mut HdfSListNode;
}
unsafe extern "C" {
    pub fn HdfSListIsEmpty(list: *const HdfSList) -> bool;
}
unsafe extern "C" {
    pub fn HdfSListAdd(list: *mut HdfSList, link: *mut HdfSListNode);
}
unsafe extern "C" {
    pub fn HdfSListRemove(list: *mut HdfSList, link: *mut HdfSListNode);
}
unsafe extern "C" {
    pub fn HdfSListFlush(list: *mut HdfSList, deleter: HdfSListDeleter);
}
unsafe extern "C" {
    pub fn HdfSListCount(list: *const HdfSList) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn HdfSListIteratorInit(iterator: *mut HdfSListIterator, list: *const HdfSList);
}
unsafe extern "C" {
    pub fn HdfSListIteratorHasNext(iterator: *const HdfSListIterator) -> bool;
}
unsafe extern "C" {
    pub fn HdfSListIteratorNext(iterator: *mut HdfSListIterator) -> *mut HdfSListNode;
}
unsafe extern "C" {
    pub fn HdfSListIteratorRemove(iterator: *mut HdfSListIterator);
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct HdfDeviceInfo {
    pub node: HdfSListNode,
    pub isDynamic: bool,
    pub status: u16,
    pub deviceType: u16,
    pub deviceId: u32,
    pub policy: u16,
    pub priority: u16,
    pub preload: u16,
    pub permission: u16,
    pub moduleName: *const ::core::ffi::c_char,
    pub svcName: *const ::core::ffi::c_char,
    pub deviceMatchAttr: *const ::core::ffi::c_char,
    pub deviceName: *const ::core::ffi::c_char,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct HdfSBuf {
    _unused: [u8; 0],
}
unsafe extern "C" {
    pub fn HdfSbufWriteUint32(sbuf: *mut HdfSBuf, value: u32) -> bool;
}
unsafe extern "C" {
    pub fn HdfSbufWriteString(sbuf: *mut HdfSBuf, value: *const ::core::ffi::c_char) -> bool;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct IDevHostService {
    pub object: HdfObject,
    pub AddDevice: ::core::option::Option<
        unsafe extern "C" fn(
            hostService: *mut IDevHostService,
            devInfo: *const HdfDeviceInfo,
        ) -> ::core::ffi::c_int,
    >,
    pub DelDevice: ::core::option::Option<
        unsafe extern "C" fn(
            hostService: *mut IDevHostService,
            devId: devid_t,
        ) -> ::core::ffi::c_int,
    >,
    pub StartService: ::core::option::Option<
        unsafe extern "C" fn(hostService: *mut IDevHostService) -> ::core::ffi::c_int,
    >,
    pub PmNotify: ::core::option::Option<
        unsafe extern "C" fn(service: *mut IDevHostService, powerState: u32) -> ::core::ffi::c_int,
    >,
    pub Dump: ::core::option::Option<
        unsafe extern "C" fn(
            hostService: *mut IDevHostService,
            data: *mut HdfSBuf,
            reply: *mut HdfSBuf,
        ) -> ::core::ffi::c_int,
    >,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct OsalMutex {
    pub realMutex: *mut ::core::ffi::c_void,
}
unsafe extern "C" {
    pub fn OsalMutexInit(mutex: *mut OsalMutex) -> i32;
}
unsafe extern "C" {
    pub fn OsalMutexDestroy(mutex: *mut OsalMutex) -> i32;
}
unsafe extern "C" {
    pub fn OsalMutexLock(mutex: *mut OsalMutex) -> i32;
}
unsafe extern "C" {
    pub fn OsalMutexUnlock(mutex: *mut OsalMutex) -> i32;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct MapNode {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Map {
    pub nodes: *mut *mut MapNode,
    pub nodeSize: u32,
    pub bucketSize: u32,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct DevHostServiceClnt {
    pub node: DListHead,
    pub devices: HdfSList,
    pub unloadDevInfos: HdfSList,
    pub dynamicDevInfos: HdfSList,
    pub deviceHashMap: *mut Map,
    pub hostService: *mut IDevHostService,
    pub hostLock: OsalMutex,
    pub devCount: u16,
    pub hostId: u16,
    pub hostPid: ::core::ffi::c_int,
    pub hostName: *const ::core::ffi::c_char,
    pub stopFlag: bool,
}
unsafe extern "C" {
    pub fn HdfAttributeManagerGetHostList(hostList: *mut HdfSList) -> bool;
}
unsafe extern "C" {
    pub fn HdfAttributeManagerGetDeviceList(
        hostClnt: *mut DevHostServiceClnt,
    ) -> ::core::ffi::c_int;
}
pub const LOG_TYPE_MIN: LogType = 0;
pub const LOG_APP: LogType = 0;
pub const LOG_INIT: LogType = 1;
pub const LOG_CORE: LogType = 3;
pub const LOG_KMSG: LogType = 4;
pub const LOG_ONLY_PRERELEASE: LogType = 5;
pub const LOG_TYPE_MAX: LogType = 6;
pub type LogType = ::core::ffi::c_uint;
pub const LOG_LEVEL_MIN: LogLevel = 0;
pub const LOG_DEBUG: LogLevel = 3;
pub const LOG_INFO: LogLevel = 4;
pub const LOG_WARN: LogLevel = 5;
pub const LOG_ERROR: LogLevel = 6;
pub const LOG_FATAL: LogLevel = 7;
pub const LOG_LEVEL_MAX: LogLevel = 8;
pub type LogLevel = ::core::ffi::c_uint;
unsafe extern "C" {
    pub fn HiLogPrint(
        type_: LogType,
        level: LogLevel,
        domain: ::core::ffi::c_uint,
        tag: *const ::core::ffi::c_char,
        fmt: *const ::core::ffi::c_char,
        ...
    ) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn HdfObjectManagerGetObject(objectId: ::core::ffi::c_int) -> *mut HdfObject;
}
unsafe extern "C" {
    pub fn OsalMSleep(ms: u32);
}
